Using a task lister in a mini-project

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <div id="list">
       <h2>My Todos</h2>
-      <ul id="tasks">
-      </ul>
+      <table>
+        <tbody id="tasks"></tbody>
+      </table>
     </div>
 
     <script src="./src/index.js"></script>
   </div>
-
 </body>
 </html>
