Using a task lister in a mini-project

--- a/index.html
+++ b/index.html
@@ -12,12 +12,39 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <!-- Add these fields to your form -->
+      <label for="priority-select">Priority:</label>
+      <select id="priority-select">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
+
+      <label for="user">User:</label>
+      <input type="text" id="user" name="user" placeholder="user">
+
+      <label for="duration">Duration:</label>
+      <input type="text" id="duration" name="duration" placeholder="duration">
+
+      <label for="date-due">Date Due:</label>
+      <input type="text" id="date-due" name="date-due" placeholder="date due">
+      
       <input type="submit" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos</h2>
       <table>
+        <thead>
+          <tr>
+            <th>Description</th>
+            <th>Priority</th>
+            <th>User</th>
+            <th>Duration</th>
+            <th>Date Due</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
         <tbody id="tasks"></tbody>
       </table>
     </div>
